@@ -57,6 +57,35 @@ CMPIStatus InternalProviderDeleteInstance(CMPIInstanceMI * mi,
 					  const CMPIContext * ctx, 
 					  const CMPIResult * rslt, 
 					  const CMPIObjectPath * cop);
+CMPIStatus InternalProviderAssociatorNames(CMPIAssociationMI * mi,
+                                           const CMPIContext * ctx,
+                                           const CMPIResult * rslt,
+                                           const CMPIObjectPath * cop,
+                                           const char *assocClass,
+                                           const char *resultClass,
+                                           const char *role,
+                                           const char *resultRole);
+CMPIStatus InternalProviderAssociators(CMPIAssociationMI * mi,
+                                       const CMPIContext * ctx,
+                                       const CMPIResult * rslt,
+                                       const CMPIObjectPath * cop,
+                                       const char *assocClass,
+                                       const char *resultClass,
+                                       const char *role,
+                                       const char *resultRole,
+                                       const char **propertyList);
+CMPIStatus InternalProviderReferenceNames(CMPIAssociationMI * mi,
+                                          const CMPIContext * ctx,
+                                          const CMPIResult * rslt,
+                                          const CMPIObjectPath * cop,
+                                          const char *assocClass,
+                                          const char *role);
+CMPIStatus InternalProviderReferences(CMPIAssociationMI * mi,
+                                      const CMPIContext * ctx,
+                                      const CMPIResult * rslt,
+                                      const CMPIObjectPath * cop,
+                                      const char *assocClass,
+                                      const char *role, const char **propertyList);                                                                                                                            
 extern UtilList *SafeInternalProviderEnumInstances(CMPIInstanceMI * mi,
 						   const CMPIContext * ctx, 
 						   const CMPIObjectPath * ref, 
